--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/express": "^4.17.21",
+    "@types/node-schedule": "^2.1.7",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "typescript": "^5.5.4",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "inversify": "^6.0.2"
+    "inversify": "^6.0.2",
+    "node-schedule": "^2.1.1"
   }
 }
