--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
+    "simulate": "node dist/simulation/simulate.js",
     "build": "tsc",
     "rebuild": "rm -rf dist node_modules && npm ci && tsc"
   },
