--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/express": "^4.17.21",
+    "@types/node": "^22.1.0",
     "@types/node-schedule": "^2.1.7",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
@@ -24,7 +25,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "inversify": "^6.0.2",
+    "mongodb": "^6.8.0",
     "node-schedule": "^2.1.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "uuid": "^10.0.0"
   }
 }
