--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
@@ -26,6 +27,7 @@
     "express": "^4.19.2",
     "inversify": "^6.0.2",
     "mongodb": "^6.8.0",
+    "neat-csv": "^7.0.0",
     "node-schedule": "^2.1.1",
     "reflect-metadata": "^0.2.2",
     "uuid": "^10.0.0"
